--- a/frontend/src/assets/locales/en/dashboard.json
+++ b/frontend/src/assets/locales/en/dashboard.json
@@ -26,6 +26,12 @@
     "viewAllTransactions": "View all transactions",
     "loadingMessage": "Loading transactions card..."
   },
+  "fuelCodes": {
+    "title": "Fuel Codes",
+    "thereAre": "There are:",
+    "fcInProgress": "Fuel Code(s) in progress",
+    "loadingMessage": "Loading transactions card..."
+  },
   "feedback": {
     "title": "We want to hear from you",
     "email": "We are always striving to<br />improve LCFS.<br />Please send your<br />suggestions and feedback to:<br /><a href=\"mailto:lcfs@gov.bc.ca\" aria-label=\"Please send your suggestions and feedback to lcfs@gov.bc.ca\">lcfs@gov.bc.ca</a>"
