fix: Rename Labels and Fix User Name Search
* Use concatenated full name column with a single ilike to fix issues and reduce complexity
* Rename CI of fuel to RCI

--- a/frontend/src/assets/locales/en/allocationAgreement.json
+++ b/frontend/src/assets/locales/en/allocationAgreement.json
@@ -17,7 +17,7 @@
     "fuelCategory": "Fuel category",
     "carbonIntensity": "Determining carbon intensity",
     "fuelCode": "Fuel code",
-    "ciOfFuel": "CI of fuel",
+    "ciOfFuel": "RCI",
     "quantity": "Quantity",
     "units": "Units",
     "agreementType": "Agreement Type",
