feat: mv fuel codes count

--- a/frontend/src/assets/locales/en/dashboard.json
+++ b/frontend/src/assets/locales/en/dashboard.json
@@ -30,7 +30,7 @@
     "title": "Fuel Codes",
     "thereAre": "There are:",
     "fcInProgress": "Fuel Code(s) in progress",
-    "loadingMessage": "Loading transactions card..."
+    "loadingMessage": "Loading fuel codes card..."
   },
   "complianceReports": {
     "title": "Compliance reports",
