feat: Add Organization Address Snapshot
* Snapshot org details when creating compliance report and store in new table
* Allow editing of the snapshots
* New UI for editing

--- a/frontend/src/assets/locales/en/organization.json
+++ b/frontend/src/assets/locales/en/organization.json
@@ -32,6 +32,7 @@
   "poLabel": "Postal / ZIP code",
   "cntryLabel": "Country",
   "bcAddrLabel": "Address in B.C. (at which records are maintained)",
+  "bcAddrLabelShort": "Address in B.C. (at which records are maintained)",
   "sameAddrLabel": "Same as address for service",
   "contactMsg": "to update address information.",
   "usersLabel": "Users",
