feat: New Shiny Yellow Errors!
* Standardize row saving and error handling model across all schedules
* Add new state for storing warnings
* Update schema to use new handler that supports warnings
* Cleanup and other fixes

--- a/frontend/src/assets/locales/en/fuelExport.json
+++ b/frontend/src/assets/locales/en/fuelExport.json
@@ -33,5 +33,5 @@
   "validateMsg": {
     "isRequired": "{{field}} is required"
   },
-  "fuelCodeFieldRequiredError": "Error updating row: Fuel code field required"
+  "fuelCodeFieldRequiredError": "Unable to save row: Fuel code field required"
 }
