--- a/frontend/src/assets/locales/en/allocationAgreement.json
+++ b/frontend/src/assets/locales/en/allocationAgreement.json
@@ -6,7 +6,7 @@
     "Report fuel volumes for which you have an allocation agreement. Report both fuels that you have allocated responsibility to another organization, and fuels you have received responsibly from another organization.",
     "Fuels that you have received responsibility for must also be reported in fuel supply."
   ],
-  "fuelCodeFieldRequiredError": "Error updating row: Fuel code field required",
+  "fuelCodeFieldRequiredError": "Unable to save row: Fuel code field required",
   "allocationAgreementColLabels": {
     "allocationTransactionType": "Responsibility",
     "transactionPartner": "Legal name of transaction partner",
