Update director instead of name for BCeID users

--- a/frontend/src/assets/locales/en/common.json
+++ b/frontend/src/assets/locales/en/common.json
@@ -1,6 +1,7 @@
 {
   "title": "Low Carbon Fuel Standard",
   "govOrg": "Government of British Columbia",
+  "underAct": "Low Carbon Fuel Standard Act",
   "gov": "Government",
   "yes": "Yes",
   "no": "No",
