feat: Add file upload to AA and IA

--- a/frontend/src/assets/locales/en/reports.json
+++ b/frontend/src/assets/locales/en/reports.json
@@ -173,5 +173,6 @@
   "noRecords": "Cannot submit: You must report fuel activity information (FSE data alone is not sufficient)",
   "invalidAddress": "Cannot submit: Please fill out all required address fields",
   "addressEdited": " - edited",
-  "viewLegacyBtn": "View Full Historical Report in TFRS"
+  "viewLegacyBtn": "View Full Historical Report in TFRS",
+  "documentLabel": "Add file attachments (maximum file size: 50 MB):"
 }
