--- a/frontend/src/assets/locales/en/transaction.json
+++ b/frontend/src/assets/locales/en/transaction.json
@@ -32,6 +32,8 @@
   "showTransactionsInvolve": "Show transactions involving",
   "selectOrganizationName": "Select organization name",
   "internalCommentsOptional": "Internal comments (optional)",
+  "attachments": "Attachments:",
+  "attachmentsOptional": "Attachments (optional)",
   "commentsLabel": "Director comments to the organization (optional)",
   "commentsTextLabel": "Comments:",
   "approvedLabel": "Approved:",
@@ -55,6 +57,7 @@
   "editableComments": "<b>Comment</b> (can be edited below):",
   "initiativeAgreement": "Initiative agreement",
   "administrativeAdjustment": "Administrative adjustment",
+  "attachmentsTitle": "Add file attachments, they will be visible to the organization and government:",
   "organization": "Organization:",
   "selectOrgLabel": "Select organization",
   "complianceBalance": "Compliance balance:",
