feat: Activity List new UI
* Remove list bullets and replace with chips
* Separate into two lists with their own header

--- a/frontend/src/assets/locales/en/reports.json
+++ b/frontend/src/assets/locales/en/reports.json
@@ -26,6 +26,7 @@
   "supplementalCreated": "Supplemental report created successfully.",
   "clickDrag": "Drag and drop your (PDF, JPG, PNG, MSG, DOC, XLS) file(s) here or click to select the file(s) from your machine to upload.",
   "activityLinksList": "Click links to report activities",
+  "activitySecondList": "Verification details",
   "activityLists": {
     "supplyOfFuel": "Supply of fuel (e.g., gasoline, diesel, jet fuel, electricity, hydrogen, etc.)",
     "finalSupplyEquipment": "Final supply equipment (FSE) identification for electricity supply",
@@ -33,6 +34,14 @@
     "notionalTransfers": "Notional transfers of eligible renewable fuel",
     "fuelsOtherUse": "Fuels for other use",
     "exportFuels": "Exporting fuel that was previously marketed in British Columbia"
+  },
+  "activityLabels": {
+    "supplyOfFuel": "Supply of fuel",
+    "finalSupplyEquipment": "FSE",
+    "allocationAgreements": "Allocation agreements",
+    "notionalTransfers": "Notional transfers",
+    "fuelsOtherUse": "Fuels for other use",
+    "exportFuels": "Exporting fuel"
   },
   "actionBtns": {
     "saveDraftBtn": "Save draft report",
