--- a/frontend/src/assets/locales/en/organization.json
+++ b/frontend/src/assets/locales/en/organization.json
@@ -23,6 +23,7 @@
   "phoneNbrLabel": "Phone number",
   "supplierTypLabel": "Supplier type",
   "regTrnLabel": "Registered for transfers",
+  "earlyIssuanceLabel": "Enable early issuance reporting",
   "edrmsLabel": "Organization profile, EDRMS record # (optional)",
   "serviceAddrLabel": "Address for service (postal address)",
   "streetAddrLabel": "Street address / PO box",
