feat: Add Schedule A Summary to Legacy Reports

--- a/frontend/src/assets/locales/en/notionalTransfer.json
+++ b/frontend/src/assets/locales/en/notionalTransfer.json
@@ -30,6 +30,7 @@
     "legalName": "Legal name of trading partner",
     "addressForService": "Address for service",
     "fuelCategory": "Fuel category",
+    "fuelClass": "Fuel Class",
     "receivedOrTransferred": "Received OR Transferred",
     "lastUpdated": "Last updated",
     "status": "Status",
