--- a/frontend/src/assets/locales/en/reports.json
+++ b/frontend/src/assets/locales/en/reports.json
@@ -34,7 +34,8 @@
     "notionalTransfers": "Notional transfers of eligible renewable fuel",
     "fuelsOtherUse": "Fuels for other use",
     "exportFuels": "Exporting fuel that was previously marketed in British Columbia",
-    "uploadDocuments": "Upload supporting documents for your report"
+    "uploadDocuments": "Upload supporting documents for your report",
+    "scheduleA": "Schedule A - Notional transfers of renewable fuel"
   },
   "activityLabels": {
     "supplyOfFuel": "Supply of fuel",
