--- a/frontend/src/assets/locales/en/otherUses.json
+++ b/frontend/src/assets/locales/en/otherUses.json
@@ -26,6 +26,7 @@
     "complianceReportId": "Compliance report ID",
     "fuelType": "Fuel type",
     "fuelCategory": "Fuel category",
+    "fuelClass": "Fuel class",
     "provisionOfTheAct": "Determining carbon intensity",
     "fuelCode": "Fuel code",
     "quantitySupplied": "Quantity supplied",
