Return to login for unauthorized access

--- a/frontend/src/assets/locales/en/common.json
+++ b/frontend/src/assets/locales/en/common.json
@@ -49,7 +49,8 @@
     "title": "403 / Unauthorized",
     "message": "Sorry, you do not have permission to access this page.",
     "contact": "Contact your LCFS or BCeID administrator or contact",
-    "email": "lcfs@gov.bc.ca"
+    "email": "lcfs@gov.bc.ca",
+    "returnToLogin": "Return to login"
   },
   "ClearFilters": "Clear filters"
 }
