feat: fuel supply changelog

--- a/frontend/src/assets/locales/en/common.json
+++ b/frontend/src/assets/locales/en/common.json
@@ -51,5 +51,6 @@
     "contact": "Contact your LCFS or BCeID administrator or contact",
     "email": "lcfs@gov.bc.ca"
   },
-  "ClearFilters": "Clear filters"
+  "ClearFilters": "Clear filters",
+  "changelogCurrentState": "Current state, Not assessed"
 }
