--- a/frontend/src/assets/locales/en/reports.json
+++ b/frontend/src/assets/locales/en/reports.json
@@ -162,5 +162,7 @@
   "noRecords": "Cannot submit: You must report fuel activity information (FSE data alone is not sufficient)",
   "invalidAddress": "Cannot submit: Please fill out all required address fields",
   "addressEdited": " - edited",
-  "viewLegacyBtn": "View Full Historical Report in TFRS"
+  "viewLegacyBtn": "View Full Historical Report in TFRS",
+  "reportAssessed": "Compliance report, Assessed",
+  "changelog": "Change log"
 }
