--- a/frontend/src/assets/locales/en/finalSupplyEquipment.json
+++ b/frontend/src/assets/locales/en/finalSupplyEquipment.json
@@ -1,6 +1,5 @@
 {
   "fseTitle": "Final supply equipment (FSE)",
-  "addFSErowsTitle": "Final supply equipment",
   "reportingResponsibilityInfo": [
     "Report dates of supply for your final supply equipment (FSE).",
     "<strong>Organization:</strong> Enter your organization name unless you are reporting FSE that you have received allocated responsibility. In this case, enter the utility account holder's organization name.",
@@ -8,25 +7,9 @@
   ],
   "newFinalSupplyEquipmentBtn": "New final supply equipment",
   "noFinalSupplyEquipmentsFound": "No final supply equipments found",
-  "finalSupplyEquipmentDownloadBtn": "Download as Excel",
-  "finalSupplyEquipmentDownloadingMsg": "Downloading final supply equipments information",
-  "finalSupplyEquipmentDownloadFailMsg": "Failed to download final supply equipment information.",
-  "finalSupplyEquipmentLoadFailMsg": "Failed to load final supply equipment information.",
-  "LoadFailMsg": "Failed to load final supply equipment rows",
-  "newFinalSupplyEquipmentTitle": "Add new final supply equipment(s)",
-  "editFinalSupplyEquipmentTitle": "Edit draft final supply equipment",
-  "approvedFinalSupplyEquipmentTitle": "Approved draft final supply equipment",
-  "deletedFinalSupplyEquipmentTitle": "Deleted draft final supply equipment",
-  "finalSupplyEquipmentAddSuccessMsg": "Final supply equipment(s) added successfully.",
-  "finalSupplyEquipmentDeleteSuccessMsg": "Final supply equipment deleted successfully.",
-  "finalSupplyEquipmentAddFailMsg": "Failed to add final supply equipment(s).",
-  "saveFinalSupplyEquipmentBtn": "Save final supply equipments",
-  "deleteFinalSupplyEquipmentBtn": "Delete final supply equipment",
-  "deleteFinalSupplyEquipment": "Delete final supply equipment",
-  "deleteConfirmText": "Are you sure you want to delete this final supply equipment?",
-  "approveFinalSupplyEquipmentBtn": "Approve final supply equipment",
-  "approveFinalSupplyEquipment": "Approve final supply equipment",
-  "approveConfirmText": "Are you sure you want to approve this final supply equipment?",
+  "downloadBtn": "Download Excel template",
+  "downloadWithDataBtn": "Include data",
+  "downloadWithoutDataBtn": "Do not include data",
   "addRow": "Add row",
   "rows": "rows",
   "finalSupplyEquipmentColLabels": {
