feat: Add Schedule B
* Move legacy strings to their own file for more separation

--- a/frontend/src/assets/locales/en/reports.json
+++ b/frontend/src/assets/locales/en/reports.json
@@ -34,9 +34,7 @@
     "notionalTransfers": "Notional transfers of eligible renewable fuel",
     "fuelsOtherUse": "Fuels for other use",
     "exportFuels": "Exporting fuel that was previously marketed in British Columbia",
-    "uploadDocuments": "Upload supporting documents for your report",
-    "scheduleA": "Schedule A - Notional transfers of renewable fuel",
-    "scheduleC": "Schedule C - Fuels used for other purposes"
+    "uploadDocuments": "Upload supporting documents for your report"
   },
   "activityLabels": {
     "supplyOfFuel": "Supply of fuel",
