--- a/frontend/src/assets/locales/en/finalSupplyEquipment.json
+++ b/frontend/src/assets/locales/en/finalSupplyEquipment.json
@@ -10,6 +10,11 @@
   "downloadBtn": "Download Excel template",
   "downloadWithDataBtn": "Include data",
   "downloadWithoutDataBtn": "Do not include data",
+  "importBtn": "Upload Excel spreadsheet",
+  "importOverwriteBtn": "Overwrite existing rows",
+  "importAppendBtn": "Append to exiting rows",
+  "importDialogHeader": "Select the Excel template (maximum size 50MB)",
+  "importSelectorText": "Drag and drop your XLSX file here or click to select from your machine to upload.",
   "addRow": "Add row",
   "rows": "rows",
   "finalSupplyEquipmentColLabels": {
