feat: notional transfer, fuel export , other uses views

--- a/frontend/src/assets/locales/en/common.json
+++ b/frontend/src/assets/locales/en/common.json
@@ -52,5 +52,6 @@
     "email": "lcfs@gov.bc.ca"
   },
   "ClearFilters": "Clear filters",
-  "changelogCurrentState": "Current state, Not assessed"
+  "changelogCurrentState": "Current state, Not assessed",
+  "exitChangeLog": "Exit change log"
 }
