--- a/frontend/src/assets/locales/en/reports.json
+++ b/frontend/src/assets/locales/en/reports.json
@@ -11,7 +11,10 @@
   },
   "noReportsFound": "No compliance reports found",
   "serviceAddrLabel": "Address for service",
-  "bcAddrLabel": "Address in B.C.",
+  "hoAddrLabel": "Head office (optional)",
+  "hoAddrLabelView": "Head office address",
+  "hoAddrLabelEdit": "Head office address (international)",
+  "bcRecordLabel": "Address in B.C. (where records are maintained)",
   "activityHdrLabel": "Did <b>{{name}}</b> engage in any of the following activities between January 1, {{period}}, and December 31, {{period}}?",
   "reportActivities": "Report activities",
   "orgDetails": "Organization details",
