fix: Remove special fuel category logic
* Use the regular field instead of ID, like most other schedules
* Delete git conflict

--- a/frontend/src/assets/locales/en/fuelExport.json
+++ b/frontend/src/assets/locales/en/fuelExport.json
@@ -15,7 +15,7 @@
     "fuelTypeId": "Fuel type",
     "exportDate": "Export date",
     "fuelTypeOther": "Fuel type other",
-    "fuelCategoryId": "Fuel category",
+    "fuelCategory": "Fuel category",
     "endUseId": "End use",
     "provisionOfTheActId": "Determining carbon intensity",
     "fuelCode": "Fuel code",
