--- a/frontend/src/assets/locales/en/reports.json
+++ b/frontend/src/assets/locales/en/reports.json
@@ -189,5 +189,9 @@
   "changelog": "Change log",
   "documentLabel": "Add file attachments (maximum file size: 50 MB):",
   "assessmentStatement": "Assessment statement from the director",
-  "assessmentStatementEdit": "(can be edited below)"
+  "assessmentStatementEdit": "(can be edited below)",
+  "assessmentRecommendation": "Assessment recommendation",
+  "directorStatement": "Director assessment statement to the organization (optional)",
+  "assessmentStatementInstructions": "The analyst and/or compliance manager can draft an assessment statement to the organization. The director can edit or delete this statement. This is suggested when making analyst adjustments or reassessments.",
+  "saveStatement": "Save statement"
 }
