--- a/frontend/src/assets/locales/en/reports.json
+++ b/frontend/src/assets/locales/en/reports.json
@@ -193,5 +193,7 @@
   "assessmentRecommendation": "Assessment recommendation",
   "directorStatement": "Director assessment statement to the organization (optional)",
   "assessmentStatementInstructions": "The analyst and/or compliance manager can draft an assessment statement to the organization. The director can edit or delete this statement. This is suggested when making analyst adjustments or reassessments.",
-  "saveStatement": "Save statement"
+  "saveStatement": "Save statement",
+  "assessmentStatementSaveSuccess": "Assessment statement saved successfully.",
+  "assessmentStatementSaveError": "Error saving assessment statement."
 }
