--- a/frontend/src/assets/locales/en/reports.json
+++ b/frontend/src/assets/locales/en/reports.json
@@ -63,6 +63,7 @@
     "deleteSupplementalReportBtn": "Delete supplemental report"
   },
   "savedSuccessText": "Compliance report successfully {{status}}",
+  "supplementalReportDeleted": "Supplemental report successfully deleted",
   "submitConfirmText": "Are you sure you want to sign and submit this compliance report?",
   "deleteConfirmText": "Are you sure you want to delete this item? This action cannot be undone, and all changes will be lost.",
   "recommendConfirmText": "Are you sure you want to recommend this compliance report?",
