fix: correctly in reserve balance queries, updated new transfer view logic around available balance, updated tests

--- a/frontend/src/assets/locales/en/transfer.json
+++ b/frontend/src/assets/locales/en/transfer.json
@@ -91,5 +91,6 @@
     "userLine": "{{user}} of {{org}}, {{date}} - {{comment}}",
     "orgLine": "{{org}}, {{date}} - {{comment}}"
   },
+  "noAvailableBalance": "No available balance for this organization",
   "quantityAdjusted": "Quantity adjusted to maximum available balance"
 }
