feat: Add Togglable Changelogs
* Add new toggle component
* Use toggle to switch between summary and change log
* Add hover back to edit icons

--- a/frontend/src/assets/locales/en/reports.json
+++ b/frontend/src/assets/locales/en/reports.json
@@ -134,6 +134,7 @@
   "reportDetails": "Report details",
   "summaryAndDeclaration": "Summary & declaration",
   "summary": "Summary",
+  "compareMode": "Compare Mode",
   "addRenewableFuelRetention": "Add a renewable fuel retention or obligation deferral",
   "errorRetrieving": "Error retrieving the record",
   "renewableFuelTarget": "Renewable fuel target",
