Modify label to display a clearer message

--- a/frontend/src/assets/locales/en/transfer.json
+++ b/frontend/src/assets/locales/en/transfer.json
@@ -92,5 +92,5 @@
     "orgLine": "{{org}}, {{date}} - {{comment}}"
   },
   "noAvailableBalance": "No available balance for this organization",
-  "quantityAdjusted": "Quantity adjusted to maximum available balance"
+  "quantityAdjusted": "Maximum available balance"
 }
