--- a/frontend/src/assets/locales/en/reports.json
+++ b/frontend/src/assets/locales/en/reports.json
@@ -61,12 +61,13 @@
     "recommendReportManagerBtn": "Recommend to director",
     "assessReportBtn": "Issue assessment",
     "reAssessReportBtn": "Re-assess report",
-    "deleteSupplementalReportBtn": "Delete supplemental report"
+    "deleteSupplementalReportBtn": "Delete supplemental report",
+    "deleteAnalystAdjustmentBtn": "Delete analyst adjustment"
   },
   "savedSuccessText": "Compliance report successfully {{status}}",
-  "supplementalReportDeleted": "Supplemental report successfully deleted",
+  "reportDeleteSuccessText": "Draft compliance report successfully deleted",
   "submitConfirmText": "Are you sure you want to sign and submit this compliance report?",
-  "deleteConfirmText": "Are you sure you want to delete this item? This action cannot be undone, and all changes will be lost.",
+  "deleteConfirmText": "Are you sure you want to delete this draft report? This action cannot be undone, and all changes will be lost.",
   "recommendConfirmText": "Are you sure you want to recommend this compliance report?",
   "returnToAnalystConfirmText": "Are you sure you want to return this compliance report back to analyst?",
   "returnToManagerConfirmText": "Are you sure you want to return this compliance report back to compliance manager?",
