fix: add custom validation to enforce fuelSuffix format

--- a/frontend/src/assets/locales/en/fuelCode.json
+++ b/frontend/src/assets/locales/en/fuelCode.json
@@ -26,7 +26,7 @@
     "fuelCodeId": "Fuel Code ID",
     "status": "Status",
     "prefix": "Prefix",
-    "fuelSuffix": "Iteration",
+    "fuelSuffix": "Fuel code",
     "fuelCode": "Fuel code",
     "company": "Company",
     "contactName": "Contact name",
