--- a/frontend/src/assets/locales/en/reports.json
+++ b/frontend/src/assets/locales/en/reports.json
@@ -220,5 +220,9 @@
     "ec": "Energy content",
     "ed": "Energy density"
   },
+  "fuelRequirementOptions": [
+    "Renewable fuel requirement & Low carbon fuel requirement",
+    "Low carbon fuel requirement only"
+  ],
   "generatedLabel": "Credits generated"
 }
